fixtures/cs-rng-01/bad/method-in-class.tsx
export class AuthService {
	createNonce() {
		return Math.random().toString(16);
	}
}
